# spadefmt

./: '  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  deny.toml  docs.sh  rustfmt.toml  rv.spade  rv2.spade  test.spade
asts/: keepemptylines-formatted.spade  keepemptylines.spade  rv-formatted-2.spade  rv-formatted.spade  rv2.spade  test2.spade  test3.spade  test4.spade
crates/type-sitter-spade/: Cargo.toml  build.rs
pretty_expressive/: Cargo.toml
pretty_expressive/src/: cost.rs  document.rs  interned_map.rs  layout.rs  lib.rs  resolve.rs
resources/: version.txt
src/: cli.rs  config.rs  document.rs  document_builder.rs  format_stream.rs  format_streams.rs  lib.rs  main.rs  printer.rs  render.rs  resolve_try_catch.rs  with_context.rs
src/format_streams/: indent_formatter.rs
util/mirgen/: Cargo.toml
util/mirgen/src/: main.rs
