[workspace]
members = []
resolver = "2"

[workspace.package]
authors = ["Ethan Uppal"]
description = "Opinionated code formatter for the Spade language"
license = "GPL-3.0"
keywords = ["spadefmt", "formatter", "autoformat"]
categories = ["development-tools"]
version = "0.0.0"
edition = "2021"
readme = "README.md"
rust-version = "1.83"

[workspace.dependencies]
argh = "0.1.13"
camino = "1.1.9"
snafu = "0.8.5"

spade-lang = "0.12.2"
spade-diagnostics = "0.12.2"
spade-parser = "0.12.2"
spade-codespan-reporting = "0.12.0"

serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
derivative = "2.2.0"
inform = "0.3.4"


[package]
name = "spadefmt"
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
argh.workspace = true
camino.workspace = true
snafu.workspace = true

spade-lang.workspace = true
spade-diagnostics.workspace = true
spade-parser.workspace = true
spade-codespan-reporting.workspace = true

serde.workspace = true
toml.workspace = true
derivative.workspace = true
inform.workspace = true
