[workspace]
members = ["util/mirgen"]
resolver = "2"

[workspace.package]
authors = ["Ethan Uppal"]
description = "Opinionated code formatter for the Spade language"
license = "GPL-3.0-only"
keywords = ["spadefmt", "formatter", "autoformat"]
categories = ["development-tools"]
version = "0.0.0"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
argh = "0.1.13"
camino = "1.1.9"
snafu = "0.8.5"

spade-lang = { git = "https://gitlab.com/spade-lang/spade.git", rev = "b8f65d0fc858d8b1a6e852959649630e591e041b" }
spade-diagnostics = { git = "https://gitlab.com/spade-lang/spade.git", rev = "b8f65d0fc858d8b1a6e852959649630e591e041b" }
spade-parser = { git = "https://gitlab.com/spade-lang/spade.git", rev = "b8f65d0fc858d8b1a6e852959649630e591e041b" }
spade-codespan-reporting = "0.12.0"
spade-ast = { git = "https://gitlab.com/spade-lang/spade.git", rev = "b8f65d0fc858d8b1a6e852959649630e591e041b" }
spade-common = { git = "https://gitlab.com/spade-lang/spade.git", rev = "b8f65d0fc858d8b1a6e852959649630e591e041b" }

serde = { version = "1.0.217", features = ["derive"] }
toml = "0.9.5"
derivative = "2.2.0"
inform = "0.3.4"


[package]
name = "spadefmt"
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
argh.workspace = true
camino.workspace = true
snafu.workspace = true

spade-lang.workspace = true
spade-diagnostics.workspace = true
spade-parser.workspace = true
spade-codespan-reporting.workspace = true
spade-ast.workspace = true
spade-common.workspace = true

serde.workspace = true
toml.workspace = true
derivative.workspace = true
inform.workspace = true
