[package]
name = "type-sitter-spade"
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
type-sitter.workspace = true

[build-dependencies]
snafu.workspace = true
type-sitter-gen.workspace = true
